# docling-graph

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CONTRIBUTING.md  MAINTAINERS.md  README.md  config.yaml  fix_schema_alignment.py  index.html  migrate_invoice_to_billing_doc.py  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  test.py
.github/: PROBLEM_STATEMENT.md  SECURITY.md  dependabot.yml  dependency-review-config.yml
.github/workflows/: ci.yml  dco.yml  docs.yml  release.yml  security.yml  semantic-release.yml
api/pipeline/: index.html
community/: index.html
community/github-workflow/: index.html
community/release-process/: index.html
development/github/: index.html
development/release/: index.html
docling_graph/: __init__.py  cli.py  config.py  config_template.yaml  exceptions.py  graph_converter.py  graph_exporter.py  graph_models.py  graph_visualizer.py  logging_utils.py  pipeline.py  protocols.py
docling_graph/cli/: config_builder.py  config_utils.py  constants.py  dependencies.py  main.py  validators.py
docling_graph/core/: __init__.py
docling_graph/db_clients/: __init__.py  neo4j_client.py
docling_graph/extractors/: base.py  many_to_one.py  one_to_one_api.py  one_to_one_local.py  utils.py
docling_graph/graph/: __init__.py
docling_graph/llm_clients/: __init__.py  base.py  config.py  gemini.py  litellm.py  llm_base.py  mistral.py  models.yaml  ollama.py  openai.py  prompts.py  response_handler.py  schema_utils.py  vllm.py
docling_graph/pipeline/: __init__.py  context.py  orchestrator.py  stages.py  trace.py
docling_graph/templategen/: __init__.py  evaluate.py  generate.py  linter.py  llm_call.py  naming.py  renderer.py  reverse.py  settings.py  snippets.py  spec.py  verify.py
docs/: index.md
docs/01-introduction/: architecture-overview.md  index.md  key-concepts.md  use-cases.md
docs/02-installation/: api-keys.md  basic-setup.md  gpu-setup.md  index.md  requirements.md
docs/03-schema-definition/: advanced-patterns.md  best-practices.md  entities-vs-components.md  field-definitions.md  index.md  relationships.md  template-basics.md  validation.md
docs/04-pipeline-configuration/: backend-selection.md  configuration-basics.md  configuration-examples.md  docling-settings.md  export-configuration.md  index.md  model-configuration.md  processing-modes.md
docs/05-extraction-process/: batch-processing.md  chunking-strategies.md  document-conversion.md  extraction-backends.md  index.md  model-merging.md
docs/06-graph-management/: export-formats.md  graph-analysis.md  graph-conversion.md  index.md  neo4j-integration.md  visualization.md
docs/07-cli/: cli-recipes.md  convert-command.md  index.md  init-command.md  inspect-command.md
docs/08-api/: batch-processing.md  index.md  pipeline-config.md  programmatic-examples.md  run-pipeline.md
docs/09-examples/: id-card.md  index.md  insurance-policy.md  invoice-extraction.md  quickstart.md  research-paper.md
docs/10-advanced/: custom-backends.md  custom-exporters.md  custom-stages.md  error-handling.md  index.md  performance-tuning.md  testing.md
docs/11-reference/: config.md  converters.md  exceptions.md  exporters.md  extractors.md  index.md  llm-clients.md  pipeline.md  protocols.md
docs/12-development/: github-workflow.md  index.md  release-process.md
docs/api/: config.md  converters.md  exporters.md  extractors.md  llm-clients.md  pipeline.md
docs/assets/: docling_graph_flowchat.md  mermaid_flowchat.md
docs/community/: github-workflow.md  index.md  release-process.md
docs/concepts/: architecture.md  configuration.md  export-formats.md  extraction-backends.md  graph-construction.md  index.md  pipeline-flowchart.md  processing-strategies.md  pydantic-templates.md
docs/development/: github.md  release.md
docs/examples/: README.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/guides/: create_pydantic_templates_for_kg_extraction.md  docling_graph_test_comprehensive_testing_guide.md  pydantic_templates_for_knowledge_graph_extraction.md  setup_with_gpu_support.md  watsonx_integration.md
docs/introduction/: architecture.md  index.md  key-concepts.md  quickstart.md  use-cases.md
docs/plans/: edgequake_improvements_implementation_detail.md
docs/reference/: config.md  (+9 more)
examples/: index.html
fundamentals/: index.html
introduction/: index.html
notebooks/: basic_tutorial.ipynb  invoice_extraction.ipynb
reference/: index.html
search/: search_index.json
stylesheets/: extra.css
templates/: id_card.py  insurance.py  invoice.py
tests/: conftest.py  pytest.ini
usage/: index.html
(+599 files in other folders)
