# This file defines your python project and its CLI entrypoint
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "docling_graph"
version = "0.1.0"
description = "A tool to convert documents into knowledge graphs using Docling."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
# Add all dependencies from requirements.txt here
dependencies = [
    "docling[vlm]",
    "pydantic",
    "networkx>=3.0",
    "pymupdf",
    "matplotlib>=3.7.0",
    "pyvis>=0.3.2",
    "rich",
    "typer[all]",
    "ollama",
    # "vllm",
    "mistralai",
    # "google",
    # "openai",
    # "ibm-watson-machine-learning"
]

[project.urls]
Homepage = "https://github.com/ayoub-ibm/docling-graph"
Issues = "https://github.com/ayoub-ibm/docling-graph/issues"

[project.scripts]
docling-graph = "docling_graph.cli.main:main"

[tool.setuptools.packages.find]
include = ["docling_graph*"]